# multi-agent-document-framework

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
config/: default.yaml  production.yaml
docs/: agent_design.md  agents.md  api_reference.md  architecture.md  configuration.md  coordination.md  implementation.md  performance.md  quality_assurance.md  verification.md  workflows.md
examples/: advanced_orchestration.py  advanced_workflow.py  basic_document.py  basic_usage.py  config_example.yaml  custom_agents.py  multi_agent_document.py  parallel_processing.py  research_paper.py  simple_document.py
src/madf/: __init__.py  models.py  orchestrator.py
src/madf/agents/: __init__.py  base.py  editing.py  research.py  verification.py  writing.py
src/madf/coordination/: __init__.py  message_bus.py  resource_manager.py  state_manager.py  workflow.py
src/madf/models/: __init__.py  document.py  request.py  task.py
src/madf/storage/: __init__.py  state_store.py
src/madf/utils/: __init__.py  config.py  llm_client.py  logging.py
src/multi_agent_framework/: __init__.py  agent.py  config.py  coordinator.py  document.py  verification.py
tests/: __init__.py  test_agent.py  test_agents.py  test_coordination.py  test_coordinator.py  test_document.py  test_models.py  test_orchestrator.py  test_verification.py
